# movie-recommendation-fastapi-service

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: api.py  main.py
app/api/: api.py
app/api/health/: controller.py  dependencies.py  router.py
app/api/v1/: api_v1.py
app/api/v1/movie_recommender/: controller.py  dependencies.py  router.py  schemas.py  service.py
app/controllers/: health.py
app/core/: config.py
app/dependencies/: health.py
app/health/: controller.py  router.py
app/routes/: api.py
app/schemas/: health.py
app/shared/: type_definitions.py
